# pixelarter

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
configs/: baseline_infer.yaml  baseline_train.yaml
docs/: ingest_pipeline.md  pixelart_format.md  roadmap.md  viewing_and_preview.md
examples/: small_builtin.pixelart  small_embedded.pixelart
scripts/: generate_examples.py  infer.py  train.py
src/pixelarter/: cli.py  config.py
src/pixelarter/data/: dataset.py  degradations.py
src/pixelarter/formats/: pixelart.py  png.py
src/pixelarter/inference/: pipeline.py
src/pixelarter/ingest/: __init__.py  analyzer.py  models.py  normalizer.py  pipeline.py
src/pixelarter/models/: baseline.py  pixelart.py
src/pixelarter/palette/: registry.py
src/pixelarter/training/: loop.py
src/pixelarter/view/: render.py
tests/: test_cli_view.py  test_config.py  test_data.py  test_ingest.py  test_model.py  test_pixelart.py  test_view.py
